@@ -1,3 +1,6 @@
+2015-03-18	Kevin Zheng
+	* server/shop.c: Adjust item enchantment price bonus
+
 2015-02-18	Kevin Zheng
 	* server/shop.c: Prevent shops from claiming 'worthless' sold items
 	* configure.ac: Ask for a C99 compiler
